passage a SDL2 et léger ralentissement du ver.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 #Déclaration du projet
-
+cmake_policy(SET CMP0004 OLD)
 project(Snake)
 add_executable(Snake main.c)
 
@@ -8,11 +8,11 @@ add_executable(Snake main.c)
 
 #Déclaration de l'exécutable
 
-find_package(SDL REQUIRED)
-if (SDL_FOUND)
-  include_directories(${SDL_INCLUDE_DIR})
-  target_link_libraries (Snake ${SDL_LIBRARY})
-endif (SDL_FOUND)
+find_package(SDL2 REQUIRED)
+if (SDL2_FOUND)
+  include_directories(${SDL2_INCLUDE_DIR})
+  target_link_libraries (Snake ${SDL2_LIBRARIES})
+endif (SDL2_FOUND)
 
 if( WITH_COREDEBUG )
   add_definitions(-ggdb3)
